--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,34 +1,31 @@
 <html lang="utf-8">
-  <head>
-    <title>Webpush Server</title>
-    <script>
-      const sendEndpoint = "http://localhost:8000/send";
-      const sendNotification = async () => {
-        const data = document.getElementById("notification").value;
-        const res = await fetch(sendEndpoint, {
-          method: "POST",
-          headers: {
-            Accept: "application/json",
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(JSON.parse(data))
-        });
-        return res.status === 200 ? res.json() : false;
-      };
-    </script>
-  </head>
 
-  <body>
-    <div id="root">
-      <textarea rows="3" cols="70" id="notification">
-{"title": "Notification title", "body": "View in my site.", "url":"https://mysite.com"}</textarea
-      >
-      <input
-        type="button"
-        onClick="javascript:sendNotification();"
-        value="Send notification"
-      />
-    </div>
-    <script src="/register.js"></script>
-  </body>
+<head>
+  <title>Webpush Server</title>
+  <script>
+    const sendEndpoint = "http://localhost:8000/send";
+    const sendNotification = async () => {
+      const data = document.getElementById("notification").value;
+      const res = await fetch(sendEndpoint, {
+        method: "POST",
+        headers: {
+          Accept: "application/json",
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(JSON.parse(data))
+      });
+      return res.status === 200 ? res.json() : false;
+    };
+  </script>
+</head>
+
+<body>
+  <div id="root">
+    <textarea rows="3" cols="70" id="notification">
+{"title": "Notification title", "body": "View in my site.", "url":"http://localhost:8000/index.html"}</textarea>
+    <input type="button" onClick="javascript:sendNotification();" value="Send notification" />
+  </div>
+  <script src="/register.js"></script>
+</body>
+
 </html>
